@@ -1,3 +1,7 @@
+2006-12-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/Filters/Rules/Person/_HasRelationship.py: Fix FamilyRelType
+	comparison (closes #758)
+
 2006-12-12  Alex Roitman  <shura@gramps-project.org>
 	* src/ViewManager.py (about): Only displaye translator credits
 	when they exist.
